fixed incorrect recipes

--- a/summary.yaml
+++ b/summary.yaml
@@ -1,16 +1,14 @@
-ppm: 235329231.12
+ppm: 182898158.5
 recipes:
-  URANIUM_POWER: 235.89
-  PLUTONIUM_POWER: 40.27
-  IMPURE_NITROGEN_GAS: 2.0
-  NORMAL_NITROGEN_GAS: 7.0
-  PURE_NITROGEN_GAS: 36.0
+  URANIUM_POWER: 121.53
+  PLUTONIUM_POWER: 121.53
+  PURE_NITROGEN_GAS: 22.7
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
   NORMAL_WATER_WELL: 12.0
   PURE_WATER_WELL: 36.0
-  WATER_EXTRACTOR: 1345.55
+  WATER_EXTRACTOR: 1100.52
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -20,7 +18,7 @@ recipes:
   IMPURE_COPPER_ORE: 9.0
   NORMAL_COPPER_ORE: 28.0
   PURE_COPPER_ORE: 12.0
-  NORMAL_LIMESTONE: 18.3
+  NORMAL_LIMESTONE: 35.43
   PURE_LIMESTONE: 27.0
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
@@ -37,72 +35,76 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1961.61
+  PURE_IRON_INGOT: 1645.88
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
-  COMPACTED_STEEL_INGOT: 76.6
-  SOLID_STEEL_INGOT: 750.96
-  PURE_ALUMINUM_INGOT: 1524.69
-  WET_CONCRETE: 155.45
-  PURE_QUARTZ_CRYSTAL: 54.89
-  CHEAP_SILICA: 604.02
-  PETROLEUM_COKE: 152.47
-  ELECTRODE_ALUMINUM_SCRAP: 304.94
+  COKE_STEEL_INGOT: 147.98
+  COMPACTED_STEEL_INGOT: 74.47
+  SOLID_STEEL_INGOT: 751.56
+  PURE_ALUMINUM_INGOT: 326.0
+  WET_CONCRETE: 213.92
+  PURE_QUARTZ_CRYSTAL: 7.6
+  CHEAP_SILICA: 887.75
+  PETROLEUM_COKE: 125.09
+  ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 190.03
-  ALUMINA_SOLUTION: 81.5
-  SLOPPY_ALUMINA: 200.88
-  SULFURIC_ACID: 80.25
-  NITRIC_ACID: 2.68
-  IRON_ROD: 158.96
-  STEEL_ROD: 120.46
-  CAST_SCREW: 1143.37
-  IRON_PLATE: 435.04
-  STITCHED_IRON_PLATE: 447.52
-  STEAMED_COPPER_SHEET: 1681.23
-  ALCLAD_ALUMINUM_SHEET: 237.36
-  ALUMINUM_CASING: 429.11
-  STEEL_PIPE: 1549.48
-  ENCASED_INDUSTRIAL_PIPE: 420.66
-  MODULAR_FRAME: 672.7
-  HEAVY_ENCASED_FRAME: 179.39
-  FUSED_MODULAR_FRAME: 129.21
-  RECYCLED_PLASTIC: 211.14
+  DILUTED_FUEL: 211.93
+  SLOPPY_ALUMINA: 48.9
+  SULFURIC_ACID: 27.5
+  NITRIC_ACID: 24.68
+  STEEL_ROD: 239.86
+  SCREW: 128.81
+  STEEL_COATED_PLATE: 184.71
+  ADHERED_IRON_PLATE: 657.28
+  STITCHED_IRON_PLATE: 27.99
+  STEAMED_COPPER_SHEET: 1166.58
+  ALCLAD_ALUMINUM_SHEET: 171.65
+  ALCLAD_CASING: 12.71
+  STEEL_PIPE: 1918.18
+  STEEL_BEAM: 14.58
+  ENCASED_INDUSTRIAL_PIPE: 530.32
+  MODULAR_FRAME: 848.06
+  HEAVY_ENCASED_FRAME: 226.15
+  HEAT_FUSED_FRAME: 15.66
+  RECYCLED_PLASTIC: 308.51
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 422.28
-  COPPER_ROTOR: 293.17
-  STATOR: 877.12
-  BATTERY: 77.56
-  ELECTRIC_MOTOR: 238.91
-  HEAT_SINK: 189.89
-  COOLING_DEVICE: 151.83
-  TURBO_ELECTRIC_MOTOR: 84.97
-  WIRE: 289.91
-  IRON_WIRE: 13547.75
-  CABLE: 1113.73
-  FUSED_QUICKWIRE: 736.0
-  SILICON_CIRCUIT_BOARD: 635.64
-  AI_LIMITER: 379.15
-  HIGH_SPEED_CONNECTOR: 19.88
-  SILICON_HIGH_SPEED_CONNECTOR: 33.89
-  CATERIUM_COMPUTER: 144.79
-  SUPER_STATE_COMPUTER: 64.64
-  RADIO_CONTROL_SYSTEM: 161.16
-  INSULATED_CRYSTAL_OSCILLATOR: 153.68
-  PRESSURE_CONVERSION_CUBE: 4.03
-  COMPACTED_COAL: 34.47
-  BEACON: 12.58
-  ELECTROMAGNETIC_CONTROL_ROD: 401.7
-  INFUSED_URANIUM_CELL: 78.63
-  FERTILE_URANIUM: 5.37
-  PLUTONIUM_PELLET: 5.37
-  ENCASED_PLUTONIUM_CELL: 16.11
-  URANIUM_FUEL_UNIT: 78.63
-  PLUTONIUM_FUEL_UNIT: 8.05
-  SMART_PLATING: 474.48
-  AUTOMATED_WIRING: 649.55
-  AUTOMATED_SPEED_WIRING: 93.74
-  MODULAR_ENGINE: 474.48
-  ADAPTIVE_CONTROL_UNIT: 310.26
-  ASSEMBLY_DIRECTOR_SYSTEM: 206.84
-  THERMAL_PROPULSION_ROCKET: 189.79
+  RECYCLED_RUBBER: 382.25
+  COPPER_ROTOR: 26.42
+  STATOR: 1058.82
+  CLASSIC_BATTERY: 98.08
+  ELECTRIC_MOTOR: 29.2
+  HEAT_EXCHANGER: 30.93
+  COOLING_SYSTEM: 15.64
+  TURBO_PRESSURE_MOTOR: 8.34
+  WIRE: 1170.74
+  FUSED_WIRE: 642.92
+  IRON_WIRE: 6153.58
+  CABLE: 2837.2
+  FUSED_QUICKWIRE: 478.83
+  SILICON_CIRCUIT_BOARD: 824.18
+  AI_LIMITER: 119.54
+  SILICON_HIGH_SPEED_CONNECTOR: 13.61
+  CATERIUM_COMPUTER: 278.82
+  SUPER_STATE_COMPUTER: 122.6
+  RADIO_CONTROL_UNIT: 12.55
+  INSULATED_CRYSTAL_OSCILLATOR: 21.27
+  EMPTY_FLUID_TANK: 6.26
+  PRESSURE_CONVERSION_CUBE: 15.69
+  PACKAGED_NITROGEN_GAS: 6.26
+  COMPACTED_COAL: 33.51
+  BEACON: 6.48
+  ELECTROMAGNETIC_CONTROL_ROD: 139.43
+  ENCASED_URANIUM_CELL: 25.58
+  INFUSED_URANIUM_CELL: 8.54
+  FERTILE_URANIUM: 24.31
+  PLUTONIUM_PELLET: 24.31
+  ENCASED_PLUTONIUM_CELL: 72.92
+  URANIUM_FUEL_UNIT: 40.51
+  PLUTONIUM_FUEL_ROD: 48.61
+  PLASTIC_SMART_PLATING: 31.29
+  AUTOMATED_WIRING: 1700.38
+  AUTOMATED_SPEED_WIRING: 21.71
+  MODULAR_ENGINE: 78.22
+  ADAPTIVE_CONTROL_UNIT: 588.5
+  ASSEMBLY_DIRECTOR_SYSTEM: 392.34
+  THERMAL_PROPULSION_ROCKET: 31.29
