--- a/summary.yaml
+++ b/summary.yaml
@@ -1,15 +1,14 @@
-ppm: 182898158.5
-total_buildings: 33401.88
+ppm: 179141546.89
+total_buildings: 33253.8
 recipes:
-  URANIUM_POWER: 121.53
-  PLUTONIUM_POWER: 121.53
-  PURE_NITROGEN_GAS: 22.7
+  URANIUM_POWER: 240.96
+  PURE_NITROGEN_GAS: 31.07
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
   NORMAL_WATER_WELL: 12.0
   PURE_WATER_WELL: 36.0
-  WATER_EXTRACTOR: 1100.52
+  WATER_EXTRACTOR: 1078.3
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -19,7 +18,7 @@ recipes:
   IMPURE_COPPER_ORE: 9.0
   NORMAL_COPPER_ORE: 28.0
   PURE_COPPER_ORE: 12.0
-  NORMAL_LIMESTONE: 35.43
+  NORMAL_LIMESTONE: 28.76
   PURE_LIMESTONE: 27.0
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
@@ -36,76 +35,72 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1645.88
+  PURE_IRON_INGOT: 1714.68
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
-  COKE_STEEL_INGOT: 147.98
-  COMPACTED_STEEL_INGOT: 74.47
-  SOLID_STEEL_INGOT: 751.56
+  COKE_STEEL_INGOT: 138.22
+  SOLID_STEEL_INGOT: 772.5
   PURE_ALUMINUM_INGOT: 326.0
-  WET_CONCRETE: 213.92
-  PURE_QUARTZ_CRYSTAL: 7.6
-  CHEAP_SILICA: 887.75
-  PETROLEUM_COKE: 125.09
+  WET_CONCRETE: 185.4
+  PURE_QUARTZ_CRYSTAL: 12.74
+  CHEAP_SILICA: 856.92
+  PETROLEUM_COKE: 118.99
   ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 211.93
+  DILUTED_FUEL: 216.81
   SLOPPY_ALUMINA: 48.9
-  SULFURIC_ACID: 27.5
-  NITRIC_ACID: 24.68
-  STEEL_ROD: 239.86
-  SCREW: 128.81
-  STEEL_COATED_PLATE: 184.71
-  ADHERED_IRON_PLATE: 657.28
-  STITCHED_IRON_PLATE: 27.99
-  STEAMED_COPPER_SHEET: 1166.58
-  ALCLAD_ALUMINUM_SHEET: 171.65
-  ALCLAD_CASING: 12.71
-  STEEL_PIPE: 1918.18
-  STEEL_BEAM: 14.58
-  ENCASED_INDUSTRIAL_PIPE: 530.32
-  MODULAR_FRAME: 848.06
-  HEAVY_ENCASED_FRAME: 226.15
-  HEAT_FUSED_FRAME: 15.66
-  RECYCLED_PLASTIC: 308.51
+  SULFURIC_ACID: 17.4
+  NITRIC_ACID: 39.15
+  STEEL_ROD: 239.14
+  SCREW: 154.74
+  STEEL_COATED_PLATE: 185.3
+  ADHERED_IRON_PLATE: 680.71
+  STEAMED_COPPER_SHEET: 1071.27
+  ALCLAD_ALUMINUM_SHEET: 160.04
+  ALCLAD_CASING: 11.37
+  STEEL_PIPE: 1863.74
+  ENCASED_INDUSTRIAL_PIPE: 512.5
+  MODULAR_FRAME: 819.57
+  HEAVY_ENCASED_FRAME: 218.55
+  HEAT_FUSED_FRAME: 18.81
+  RECYCLED_PLASTIC: 320.1
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 382.25
-  COPPER_ROTOR: 26.42
-  STATOR: 1058.82
-  CLASSIC_BATTERY: 98.08
-  ELECTRIC_MOTOR: 29.2
-  HEAT_EXCHANGER: 30.93
-  COOLING_SYSTEM: 15.64
-  TURBO_PRESSURE_MOTOR: 8.34
-  WIRE: 1170.74
-  FUSED_WIRE: 642.92
-  IRON_WIRE: 6153.58
-  CABLE: 2837.2
-  FUSED_QUICKWIRE: 478.83
-  SILICON_CIRCUIT_BOARD: 824.18
-  AI_LIMITER: 119.54
-  SILICON_HIGH_SPEED_CONNECTOR: 13.61
-  CATERIUM_COMPUTER: 278.82
-  SUPER_STATE_COMPUTER: 122.6
-  RADIO_CONTROL_UNIT: 12.55
-  INSULATED_CRYSTAL_OSCILLATOR: 21.27
-  EMPTY_FLUID_TANK: 6.26
-  PRESSURE_CONVERSION_CUBE: 15.69
-  PACKAGED_NITROGEN_GAS: 6.26
-  COMPACTED_COAL: 33.51
-  BEACON: 6.48
-  ELECTROMAGNETIC_CONTROL_ROD: 139.43
-  ENCASED_URANIUM_CELL: 25.58
-  INFUSED_URANIUM_CELL: 8.54
-  FERTILE_URANIUM: 24.31
-  PLUTONIUM_PELLET: 24.31
-  ENCASED_PLUTONIUM_CELL: 72.92
-  URANIUM_FUEL_UNIT: 40.51
-  PLUTONIUM_FUEL_ROD: 48.61
-  PLASTIC_SMART_PLATING: 31.29
-  AUTOMATED_WIRING: 1700.38
-  AUTOMATED_SPEED_WIRING: 21.71
-  MODULAR_ENGINE: 78.22
-  ADAPTIVE_CONTROL_UNIT: 588.5
-  ASSEMBLY_DIRECTOR_SYSTEM: 392.34
-  THERMAL_PROPULSION_ROCKET: 31.29
+  RECYCLED_RUBBER: 383.79
+  COPPER_ROTOR: 31.74
+  STATOR: 1036.58
+  CLASSIC_BATTERY: 91.45
+  ELECTRIC_MOTOR: 35.08
+  HEAT_EXCHANGER: 22.55
+  COOLING_SYSTEM: 18.79
+  TURBO_PRESSURE_MOTOR: 10.02
+  WIRE: 1291.18
+  FUSED_WIRE: 458.26
+  IRON_WIRE: 6444.32
+  CABLE: 2794.4
+  QUICKWIRE_CABLE: 5.45
+  FUSED_QUICKWIRE: 552.7
+  CATERIUM_CIRCUIT_BOARD: 69.72
+  SILICON_CIRCUIT_BOARD: 733.69
+  AI_LIMITER: 128.51
+  HIGH_SPEED_CONNECTOR: 3.59
+  CATERIUM_COMPUTER: 265.88
+  SUPERCOMPUTER: 2.39
+  SUPER_STATE_COMPUTER: 114.31
+  RADIO_CONTROL_UNIT: 15.08
+  INSULATED_CRYSTAL_OSCILLATOR: 35.66
+  EMPTY_FLUID_TANK: 7.52
+  PRESSURE_CONVERSION_CUBE: 18.84
+  PACKAGED_NITROGEN_GAS: 7.52
+  BEACON: 12.85
+  ELECTROMAGNETIC_CONTROL_ROD: 141.64
+  ENCASED_URANIUM_CELL: 4.91
+  INFUSED_URANIUM_CELL: 74.19
+  NON_FISSILE_URANIUM: 48.19
+  PLUTONIUM_PELLET: 24.1
+  URANIUM_FUEL_UNIT: 80.32
+  PLASTIC_SMART_PLATING: 37.59
+  AUTOMATED_WIRING: 1673.09
+  MODULAR_ENGINE: 93.97
+  ADAPTIVE_CONTROL_UNIT: 557.7
+  ASSEMBLY_DIRECTOR_SYSTEM: 371.8
+  THERMAL_PROPULSION_ROCKET: 37.59
