round total_buildings

--- a/summary.yaml
+++ b/summary.yaml
@@ -1,5 +1,5 @@
 ppm: 177163412.38
-total_buildings: 33219.329999999994
+total_buildings: 33219.33
 recipes:
   URANIUM_POWER: 241.64
   PURE_NITROGEN_GAS: 29.06
