--- a/summary.yaml
+++ b/summary.yaml
@@ -1,14 +1,15 @@
-ppm: 177163412.38
-total_buildings: 33219.33
+ppm: 182898158.5
+total_buildings: 33401.88
 recipes:
-  URANIUM_POWER: 241.64
-  PURE_NITROGEN_GAS: 29.06
+  URANIUM_POWER: 121.53
+  PLUTONIUM_POWER: 121.53
+  PURE_NITROGEN_GAS: 22.7
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
   NORMAL_WATER_WELL: 12.0
   PURE_WATER_WELL: 36.0
-  WATER_EXTRACTOR: 1087.7
+  WATER_EXTRACTOR: 1100.52
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -18,7 +19,7 @@ recipes:
   IMPURE_COPPER_ORE: 9.0
   NORMAL_COPPER_ORE: 28.0
   PURE_COPPER_ORE: 12.0
-  NORMAL_LIMESTONE: 31.84
+  NORMAL_LIMESTONE: 35.43
   PURE_LIMESTONE: 27.0
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
@@ -35,75 +36,76 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1705.31
+  PURE_IRON_INGOT: 1645.88
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
-  COKE_STEEL_INGOT: 142.59
-  SOLID_STEEL_INGOT: 772.5
+  COKE_STEEL_INGOT: 147.98
+  COMPACTED_STEEL_INGOT: 74.47
+  SOLID_STEEL_INGOT: 751.56
   PURE_ALUMINUM_INGOT: 326.0
-  WET_CONCRETE: 200.52
-  PURE_QUARTZ_CRYSTAL: 12.42
-  CHEAP_SILICA: 858.81
-  PETROLEUM_COKE: 121.72
+  WET_CONCRETE: 213.92
+  PURE_QUARTZ_CRYSTAL: 7.6
+  CHEAP_SILICA: 887.75
+  PETROLEUM_COKE: 125.09
   ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 214.63
+  DILUTED_FUEL: 211.93
   SLOPPY_ALUMINA: 48.9
-  SULFURIC_ACID: 17.26
-  NITRIC_ACID: 37.78
-  STEEL_ROD: 232.8
-  SCREW: 140.01
-  STEEL_COATED_PLATE: 181.8
-  ADHERED_IRON_PLATE: 667.85
-  STEAMED_COPPER_SHEET: 1077.41
-  ALCLAD_ALUMINUM_SHEET: 159.72
-  ALCLAD_CASING: 13.51
-  STEEL_PIPE: 1852.72
-  STEEL_BEAM: 14.5
-  ENCASED_INDUSTRIAL_PIPE: 504.32
-  MODULAR_FRAME: 806.47
-  HEAVY_ENCASED_FRAME: 215.06
-  HEAT_FUSED_FRAME: 17.02
-  RECYCLED_PLASTIC: 316.04
+  SULFURIC_ACID: 27.5
+  NITRIC_ACID: 24.68
+  STEEL_ROD: 239.86
+  SCREW: 128.81
+  STEEL_COATED_PLATE: 184.71
+  ADHERED_IRON_PLATE: 657.28
+  STITCHED_IRON_PLATE: 27.99
+  STEAMED_COPPER_SHEET: 1166.58
+  ALCLAD_ALUMINUM_SHEET: 171.65
+  ALCLAD_CASING: 12.71
+  STEEL_PIPE: 1918.18
+  STEEL_BEAM: 14.58
+  ENCASED_INDUSTRIAL_PIPE: 530.32
+  MODULAR_FRAME: 848.06
+  HEAVY_ENCASED_FRAME: 226.15
+  HEAT_FUSED_FRAME: 15.66
+  RECYCLED_PLASTIC: 308.51
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 382.36
-  COPPER_ROTOR: 28.72
-  STATOR: 1045.02
-  CLASSIC_BATTERY: 91.27
-  ELECTRIC_MOTOR: 31.74
-  HEAT_EXCHANGER: 32.49
-  COOLING_SYSTEM: 17.01
-  TURBO_PRESSURE_MOTOR: 9.07
-  WIRE: 1270.54
-  FUSED_WIRE: 453.51
-  IRON_WIRE: 6395.63
-  CABLE: 2753.46
-  QUICKWIRE_CABLE: 21.02
-  FUSED_QUICKWIRE: 554.6
-  CATERIUM_CIRCUIT_BOARD: 61.84
-  SILICON_CIRCUIT_BOARD: 731.21
-  AI_LIMITER: 139.49
-  SILICON_HIGH_SPEED_CONNECTOR: 2.81
-  CATERIUM_COMPUTER: 263.1
-  SUPERCOMPUTER: 1.5
-  SUPER_STATE_COMPUTER: 114.09
-  RADIO_CONTROL_UNIT: 13.64
-  INSULATED_CRYSTAL_OSCILLATOR: 34.78
-  EMPTY_FLUID_TANK: 6.8
-  PRESSURE_CONVERSION_CUBE: 17.05
-  PACKAGED_NITROGEN_GAS: 6.8
-  BEACON: 12.89
-  ELECTROMAGNETIC_CONTROL_ROD: 156.61
-  ENCASED_URANIUM_CELL: 4.6
-  INFUSED_URANIUM_CELL: 74.79
-  NON_FISSILE_URANIUM: 48.33
-  PLUTONIUM_PELLET: 24.16
-  ENCASED_PLUTONIUM_CELL: 72.49
-  URANIUM_FUEL_UNIT: 80.55
-  PLUTONIUM_FUEL_ROD: 48.33
-  PLASTIC_SMART_PLATING: 34.01
-  AUTOMATED_WIRING: 1659.77
-  MODULAR_ENGINE: 85.03
-  ADAPTIVE_CONTROL_UNIT: 553.26
-  ASSEMBLY_DIRECTOR_SYSTEM: 368.84
-  THERMAL_PROPULSION_ROCKET: 34.01
+  RECYCLED_RUBBER: 382.25
+  COPPER_ROTOR: 26.42
+  STATOR: 1058.82
+  CLASSIC_BATTERY: 98.08
+  ELECTRIC_MOTOR: 29.2
+  HEAT_EXCHANGER: 30.93
+  COOLING_SYSTEM: 15.64
+  TURBO_PRESSURE_MOTOR: 8.34
+  WIRE: 1170.74
+  FUSED_WIRE: 642.92
+  IRON_WIRE: 6153.58
+  CABLE: 2837.2
+  FUSED_QUICKWIRE: 478.83
+  SILICON_CIRCUIT_BOARD: 824.18
+  AI_LIMITER: 119.54
+  SILICON_HIGH_SPEED_CONNECTOR: 13.61
+  CATERIUM_COMPUTER: 278.82
+  SUPER_STATE_COMPUTER: 122.6
+  RADIO_CONTROL_UNIT: 12.55
+  INSULATED_CRYSTAL_OSCILLATOR: 21.27
+  EMPTY_FLUID_TANK: 6.26
+  PRESSURE_CONVERSION_CUBE: 15.69
+  PACKAGED_NITROGEN_GAS: 6.26
+  COMPACTED_COAL: 33.51
+  BEACON: 6.48
+  ELECTROMAGNETIC_CONTROL_ROD: 139.43
+  ENCASED_URANIUM_CELL: 25.58
+  INFUSED_URANIUM_CELL: 8.54
+  FERTILE_URANIUM: 24.31
+  PLUTONIUM_PELLET: 24.31
+  ENCASED_PLUTONIUM_CELL: 72.92
+  URANIUM_FUEL_UNIT: 40.51
+  PLUTONIUM_FUEL_ROD: 48.61
+  PLASTIC_SMART_PLATING: 31.29
+  AUTOMATED_WIRING: 1700.38
+  AUTOMATED_SPEED_WIRING: 21.71
+  MODULAR_ENGINE: 78.22
+  ADAPTIVE_CONTROL_UNIT: 588.5
+  ASSEMBLY_DIRECTOR_SYSTEM: 392.34
+  THERMAL_PROPULSION_ROCKET: 31.29
