update power requirements, fix recipe

--- a/summary.yaml
+++ b/summary.yaml
@@ -1,15 +1,13 @@
-ppm: 182898158.5
-total_buildings: 33401.88
+ppm: 183074870.06
+total_buildings: 33672.57
 recipes:
-  URANIUM_POWER: 121.53
-  PLUTONIUM_POWER: 121.53
-  PURE_NITROGEN_GAS: 22.7
+  URANIUM_POWER: 120.0
+  PLUTONIUM_POWER: 120.0
+  PURE_NITROGEN_GAS: 22.64
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
-  NORMAL_WATER_WELL: 12.0
-  PURE_WATER_WELL: 36.0
-  WATER_EXTRACTOR: 1100.52
+  WATER_EXTRACTOR: 1157.86
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -19,7 +17,7 @@ recipes:
   IMPURE_COPPER_ORE: 9.0
   NORMAL_COPPER_ORE: 28.0
   PURE_COPPER_ORE: 12.0
-  NORMAL_LIMESTONE: 35.43
+  NORMAL_LIMESTONE: 47.0
   PURE_LIMESTONE: 27.0
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
@@ -36,76 +34,77 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1645.88
+  PURE_IRON_INGOT: 1644.92
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
   COKE_STEEL_INGOT: 147.98
-  COMPACTED_STEEL_INGOT: 74.47
-  SOLID_STEEL_INGOT: 751.56
+  COMPACTED_STEEL_INGOT: 75.97
+  SOLID_STEEL_INGOT: 751.13
   PURE_ALUMINUM_INGOT: 326.0
-  WET_CONCRETE: 213.92
-  PURE_QUARTZ_CRYSTAL: 7.6
-  CHEAP_SILICA: 887.75
+  CONCRETE: 307.43
+  WET_CONCRETE: 156.45
+  PURE_QUARTZ_CRYSTAL: 7.54
+  CHEAP_SILICA: 888.09
   PETROLEUM_COKE: 125.09
   ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
   DILUTED_FUEL: 211.93
   SLOPPY_ALUMINA: 48.9
-  SULFURIC_ACID: 27.5
-  NITRIC_ACID: 24.68
-  STEEL_ROD: 239.86
-  SCREW: 128.81
-  STEEL_COATED_PLATE: 184.71
-  ADHERED_IRON_PLATE: 657.28
-  STITCHED_IRON_PLATE: 27.99
-  STEAMED_COPPER_SHEET: 1166.58
-  ALCLAD_ALUMINUM_SHEET: 171.65
-  ALCLAD_CASING: 12.71
-  STEEL_PIPE: 1918.18
-  STEEL_BEAM: 14.58
-  ENCASED_INDUSTRIAL_PIPE: 530.32
-  MODULAR_FRAME: 848.06
-  HEAVY_ENCASED_FRAME: 226.15
+  SULFURIC_ACID: 28.0
+  NITRIC_ACID: 24.53
+  STEEL_ROD: 240.07
+  SCREW: 128.82
+  STEEL_COATED_PLATE: 184.93
+  ADHERED_IRON_PLATE: 653.49
+  STITCHED_IRON_PLATE: 30.98
+  STEAMED_COPPER_SHEET: 1167.33
+  ALCLAD_ALUMINUM_SHEET: 171.83
+  ALCLAD_CASING: 12.67
+  STEEL_PIPE: 1919.43
+  STEEL_BEAM: 14.4
+  ENCASED_INDUSTRIAL_PIPE: 530.86
+  MODULAR_FRAME: 848.92
+  HEAVY_ENCASED_FRAME: 226.38
   HEAT_FUSED_FRAME: 15.66
-  RECYCLED_PLASTIC: 308.51
+  RECYCLED_PLASTIC: 308.6
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 382.25
-  COPPER_ROTOR: 26.42
-  STATOR: 1058.82
-  CLASSIC_BATTERY: 98.08
-  ELECTRIC_MOTOR: 29.2
-  HEAT_EXCHANGER: 30.93
-  COOLING_SYSTEM: 15.64
+  RECYCLED_RUBBER: 382.18
+  COPPER_ROTOR: 26.43
+  STATOR: 1058.95
+  CLASSIC_BATTERY: 98.19
+  ELECTRIC_MOTOR: 29.21
+  HEAT_EXCHANGER: 30.78
+  COOLING_SYSTEM: 15.65
   TURBO_PRESSURE_MOTOR: 8.34
-  WIRE: 1170.74
-  FUSED_WIRE: 642.92
-  IRON_WIRE: 6153.58
-  CABLE: 2837.2
-  FUSED_QUICKWIRE: 478.83
-  SILICON_CIRCUIT_BOARD: 824.18
-  AI_LIMITER: 119.54
-  SILICON_HIGH_SPEED_CONNECTOR: 13.61
-  CATERIUM_COMPUTER: 278.82
-  SUPER_STATE_COMPUTER: 122.6
+  WIRE: 1170.36
+  FUSED_WIRE: 646.27
+  IRON_WIRE: 6149.98
+  CABLE: 2838.04
+  FUSED_QUICKWIRE: 477.49
+  SILICON_CIRCUIT_BOARD: 825.14
+  AI_LIMITER: 119.16
+  SILICON_HIGH_SPEED_CONNECTOR: 13.9
+  CATERIUM_COMPUTER: 279.12
+  SUPER_STATE_COMPUTER: 122.74
   RADIO_CONTROL_UNIT: 12.55
-  INSULATED_CRYSTAL_OSCILLATOR: 21.27
+  INSULATED_CRYSTAL_OSCILLATOR: 21.11
   EMPTY_FLUID_TANK: 6.26
   PRESSURE_CONVERSION_CUBE: 15.69
   PACKAGED_NITROGEN_GAS: 6.26
-  COMPACTED_COAL: 33.51
-  BEACON: 6.48
-  ELECTROMAGNETIC_CONTROL_ROD: 139.43
-  ENCASED_URANIUM_CELL: 25.58
-  INFUSED_URANIUM_CELL: 8.54
-  FERTILE_URANIUM: 24.31
-  PLUTONIUM_PELLET: 24.31
-  ENCASED_PLUTONIUM_CELL: 72.92
-  URANIUM_FUEL_UNIT: 40.51
-  PLUTONIUM_FUEL_ROD: 48.61
+  COMPACTED_COAL: 34.19
+  BEACON: 6.4
+  ELECTROMAGNETIC_CONTROL_ROD: 139.03
+  ENCASED_URANIUM_CELL: 26.66
+  INFUSED_URANIUM_CELL: 6.67
+  FERTILE_URANIUM: 24.0
+  PLUTONIUM_PELLET: 24.0
+  ENCASED_PLUTONIUM_CELL: 72.0
+  URANIUM_FUEL_UNIT: 40.0
+  PLUTONIUM_FUEL_ROD: 48.0
   PLASTIC_SMART_PLATING: 31.29
-  AUTOMATED_WIRING: 1700.38
-  AUTOMATED_SPEED_WIRING: 21.71
-  MODULAR_ENGINE: 78.22
-  ADAPTIVE_CONTROL_UNIT: 588.5
-  ASSEMBLY_DIRECTOR_SYSTEM: 392.34
+  AUTOMATED_WIRING: 1700.9
+  AUTOMATED_SPEED_WIRING: 22.18
+  MODULAR_ENGINE: 78.23
+  ADAPTIVE_CONTROL_UNIT: 589.14
+  ASSEMBLY_DIRECTOR_SYSTEM: 392.76
   THERMAL_PROPULSION_ROCKET: 31.29
