--- a/eco-summary.yaml
+++ b/eco-summary.yaml
@@ -1,14 +1,12 @@
-ppm: 177163412.38
-total_buildings: 33219.33
+ppm: 177447048.57
+total_buildings: 33567.13
 recipes:
-  URANIUM_POWER: 241.64
-  PURE_NITROGEN_GAS: 29.06
+  URANIUM_POWER: 238.72
+  PURE_NITROGEN_GAS: 28.79
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
-  NORMAL_WATER_WELL: 12.0
-  PURE_WATER_WELL: 36.0
-  WATER_EXTRACTOR: 1087.7
+  WATER_EXTRACTOR: 1130.47
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -18,7 +16,7 @@ recipes:
   IMPURE_COPPER_ORE: 9.0
   NORMAL_COPPER_ORE: 28.0
   PURE_COPPER_ORE: 12.0
-  NORMAL_LIMESTONE: 31.84
+  NORMAL_LIMESTONE: 47.0
   PURE_LIMESTONE: 27.0
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
@@ -35,75 +33,76 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1705.31
+  PURE_IRON_INGOT: 1702.8
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
-  COKE_STEEL_INGOT: 142.59
+  COKE_STEEL_INGOT: 143.76
   SOLID_STEEL_INGOT: 772.5
   PURE_ALUMINUM_INGOT: 326.0
-  WET_CONCRETE: 200.52
-  PURE_QUARTZ_CRYSTAL: 12.42
-  CHEAP_SILICA: 858.81
-  PETROLEUM_COKE: 121.72
+  CONCRETE: 401.08
+  WET_CONCRETE: 125.78
+  PURE_QUARTZ_CRYSTAL: 12.28
+  CHEAP_SILICA: 859.63
+  PETROLEUM_COKE: 122.45
   ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 214.63
+  DILUTED_FUEL: 214.04
   SLOPPY_ALUMINA: 48.9
-  SULFURIC_ACID: 17.26
-  NITRIC_ACID: 37.78
-  STEEL_ROD: 232.8
-  SCREW: 140.01
-  STEEL_COATED_PLATE: 181.8
-  ADHERED_IRON_PLATE: 667.85
-  STEAMED_COPPER_SHEET: 1077.41
-  ALCLAD_ALUMINUM_SHEET: 159.72
-  ALCLAD_CASING: 13.51
-  STEEL_PIPE: 1852.72
-  STEEL_BEAM: 14.5
-  ENCASED_INDUSTRIAL_PIPE: 504.32
-  MODULAR_FRAME: 806.47
-  HEAVY_ENCASED_FRAME: 215.06
-  HEAT_FUSED_FRAME: 17.02
-  RECYCLED_PLASTIC: 316.04
+  SULFURIC_ACID: 17.86
+  NITRIC_ACID: 37.38
+  STEEL_ROD: 233.03
+  SCREW: 138.94
+  STEEL_COATED_PLATE: 181.98
+  ADHERED_IRON_PLATE: 669.22
+  STEAMED_COPPER_SHEET: 1081.75
+  ALCLAD_ALUMINUM_SHEET: 161.07
+  ALCLAD_CASING: 13.4
+  STEEL_PIPE: 1856.85
+  STEEL_BEAM: 14.32
+  ENCASED_INDUSTRIAL_PIPE: 505.52
+  MODULAR_FRAME: 808.39
+  HEAVY_ENCASED_FRAME: 215.57
+  HEAT_FUSED_FRAME: 16.89
+  RECYCLED_PLASTIC: 314.93
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 382.36
-  COPPER_ROTOR: 28.72
-  STATOR: 1045.02
-  CLASSIC_BATTERY: 91.27
-  ELECTRIC_MOTOR: 31.74
-  HEAT_EXCHANGER: 32.49
-  COOLING_SYSTEM: 17.01
-  TURBO_PRESSURE_MOTOR: 9.07
-  WIRE: 1270.54
-  FUSED_WIRE: 453.51
-  IRON_WIRE: 6395.63
-  CABLE: 2753.46
-  QUICKWIRE_CABLE: 21.02
-  FUSED_QUICKWIRE: 554.6
-  CATERIUM_CIRCUIT_BOARD: 61.84
-  SILICON_CIRCUIT_BOARD: 731.21
-  AI_LIMITER: 139.49
-  SILICON_HIGH_SPEED_CONNECTOR: 2.81
-  CATERIUM_COMPUTER: 263.1
-  SUPERCOMPUTER: 1.5
-  SUPER_STATE_COMPUTER: 114.09
-  RADIO_CONTROL_UNIT: 13.64
-  INSULATED_CRYSTAL_OSCILLATOR: 34.78
-  EMPTY_FLUID_TANK: 6.8
-  PRESSURE_CONVERSION_CUBE: 17.05
-  PACKAGED_NITROGEN_GAS: 6.8
-  BEACON: 12.89
-  ELECTROMAGNETIC_CONTROL_ROD: 156.61
-  ENCASED_URANIUM_CELL: 4.6
-  INFUSED_URANIUM_CELL: 74.79
-  NON_FISSILE_URANIUM: 48.33
-  PLUTONIUM_PELLET: 24.16
-  ENCASED_PLUTONIUM_CELL: 72.49
-  URANIUM_FUEL_UNIT: 80.55
-  PLUTONIUM_FUEL_ROD: 48.33
-  PLASTIC_SMART_PLATING: 34.01
-  AUTOMATED_WIRING: 1659.77
-  MODULAR_ENGINE: 85.03
-  ADAPTIVE_CONTROL_UNIT: 553.26
-  ASSEMBLY_DIRECTOR_SYSTEM: 368.84
-  THERMAL_PROPULSION_ROCKET: 34.01
+  RECYCLED_RUBBER: 381.65
+  COPPER_ROTOR: 28.5
+  STATOR: 1047.13
+  CLASSIC_BATTERY: 92.04
+  ELECTRIC_MOTOR: 31.5
+  HEAT_EXCHANGER: 32.19
+  COOLING_SYSTEM: 16.87
+  TURBO_PRESSURE_MOTOR: 9.0
+  WIRE: 1266.68
+  FUSED_WIRE: 468.33
+  IRON_WIRE: 6382.54
+  CABLE: 2765.72
+  QUICKWIRE_CABLE: 17.55
+  FUSED_QUICKWIRE: 548.67
+  CATERIUM_CIRCUIT_BOARD: 57.7
+  SILICON_CIRCUIT_BOARD: 735.84
+  AI_LIMITER: 138.5
+  SILICON_HIGH_SPEED_CONNECTOR: 1.42
+  CATERIUM_COMPUTER: 263.74
+  SUPERCOMPUTER: 0.75
+  SUPER_STATE_COMPUTER: 115.05
+  RADIO_CONTROL_UNIT: 13.54
+  INSULATED_CRYSTAL_OSCILLATOR: 34.4
+  EMPTY_FLUID_TANK: 6.75
+  PRESSURE_CONVERSION_CUBE: 16.92
+  PACKAGED_NITROGEN_GAS: 6.75
+  BEACON: 12.73
+  ELECTROMAGNETIC_CONTROL_ROD: 156.25
+  ENCASED_URANIUM_CELL: 5.9
+  INFUSED_URANIUM_CELL: 72.2
+  NON_FISSILE_URANIUM: 47.74
+  PLUTONIUM_PELLET: 23.87
+  ENCASED_PLUTONIUM_CELL: 71.62
+  URANIUM_FUEL_UNIT: 79.57
+  PLUTONIUM_FUEL_ROD: 47.74
+  PLASTIC_SMART_PLATING: 33.75
+  AUTOMATED_WIRING: 1665.26
+  MODULAR_ENGINE: 84.37
+  ADAPTIVE_CONTROL_UNIT: 555.09
+  ASSEMBLY_DIRECTOR_SYSTEM: 370.06
+  THERMAL_PROPULSION_ROCKET: 33.75
