--- a/eco-summary.yaml
+++ b/eco-summary.yaml
@@ -1,12 +1,12 @@
-ppm: 177447048.57
-total_buildings: 33567.13
+ppm: 179446681.96
+total_buildings: 33660.27
 recipes:
-  URANIUM_POWER: 238.72
-  PURE_NITROGEN_GAS: 28.79
+  URANIUM_POWER: 238.07
+  PURE_NITROGEN_GAS: 30.8
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
-  WATER_EXTRACTOR: 1130.47
+  WATER_EXTRACTOR: 1107.92
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
@@ -33,76 +33,73 @@ recipes:
   IMPURE_BAUXITE: 5.0
   NORMAL_BAUXITE: 6.0
   PURE_BAUXITE: 6.0
-  PURE_IRON_INGOT: 1702.8
+  PURE_IRON_INGOT: 1712.79
   PURE_COPPER_INGOT: 1924.0
   PURE_CATERIUM_INGOT: 460.0
-  COKE_STEEL_INGOT: 143.76
+  COKE_STEEL_INGOT: 139.1
   SOLID_STEEL_INGOT: 772.5
   PURE_ALUMINUM_INGOT: 326.0
-  CONCRETE: 401.08
-  WET_CONCRETE: 125.78
-  PURE_QUARTZ_CRYSTAL: 12.28
-  CHEAP_SILICA: 859.63
-  PETROLEUM_COKE: 122.45
+  CONCRETE: 483.65
+  WET_CONCRETE: 95.13
+  PURE_QUARTZ_CRYSTAL: 12.62
+  CHEAP_SILICA: 857.59
+  PETROLEUM_COKE: 119.54
   ELECTRODE_ALUMINUM_SCRAP: 65.2
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 214.04
+  DILUTED_FUEL: 216.37
   SLOPPY_ALUMINA: 48.9
-  SULFURIC_ACID: 17.86
-  NITRIC_ACID: 37.38
-  STEEL_ROD: 233.03
-  SCREW: 138.94
-  STEEL_COATED_PLATE: 181.98
-  ADHERED_IRON_PLATE: 669.22
-  STEAMED_COPPER_SHEET: 1081.75
-  ALCLAD_ALUMINUM_SHEET: 161.07
-  ALCLAD_CASING: 13.4
-  STEEL_PIPE: 1856.85
-  STEEL_BEAM: 14.32
-  ENCASED_INDUSTRIAL_PIPE: 505.52
-  MODULAR_FRAME: 808.39
-  HEAVY_ENCASED_FRAME: 215.57
-  HEAT_FUSED_FRAME: 16.89
-  RECYCLED_PLASTIC: 314.93
+  SULFURIC_ACID: 18.0
+  NITRIC_ACID: 38.74
+  STEEL_ROD: 239.17
+  SCREW: 153.64
+  STEEL_COATED_PLATE: 185.43
+  ADHERED_IRON_PLATE: 677.5
+  STITCHED_IRON_PLATE: 2.63
+  STEAMED_COPPER_SHEET: 1073.28
+  ALCLAD_ALUMINUM_SHEET: 161.37
+  ALCLAD_CASING: 11.28
+  STEEL_PIPE: 1866.64
+  ENCASED_INDUSTRIAL_PIPE: 512.93
+  MODULAR_FRAME: 820.7
+  HEAVY_ENCASED_FRAME: 218.85
+  HEAT_FUSED_FRAME: 18.66
+  RECYCLED_PLASTIC: 319.57
   RESIDUAL_RUBBER: 195.0
-  RECYCLED_RUBBER: 381.65
-  COPPER_ROTOR: 28.5
-  STATOR: 1047.13
-  CLASSIC_BATTERY: 92.04
-  ELECTRIC_MOTOR: 31.5
-  HEAT_EXCHANGER: 32.19
-  COOLING_SYSTEM: 16.87
-  TURBO_PRESSURE_MOTOR: 9.0
-  WIRE: 1266.68
-  FUSED_WIRE: 468.33
-  IRON_WIRE: 6382.54
-  CABLE: 2765.72
-  QUICKWIRE_CABLE: 17.55
-  FUSED_QUICKWIRE: 548.67
-  CATERIUM_CIRCUIT_BOARD: 57.7
-  SILICON_CIRCUIT_BOARD: 735.84
-  AI_LIMITER: 138.5
-  SILICON_HIGH_SPEED_CONNECTOR: 1.42
-  CATERIUM_COMPUTER: 263.74
-  SUPERCOMPUTER: 0.75
-  SUPER_STATE_COMPUTER: 115.05
-  RADIO_CONTROL_UNIT: 13.54
-  INSULATED_CRYSTAL_OSCILLATOR: 34.4
-  EMPTY_FLUID_TANK: 6.75
-  PRESSURE_CONVERSION_CUBE: 16.92
-  PACKAGED_NITROGEN_GAS: 6.75
-  BEACON: 12.73
-  ELECTROMAGNETIC_CONTROL_ROD: 156.25
-  ENCASED_URANIUM_CELL: 5.9
-  INFUSED_URANIUM_CELL: 72.2
-  NON_FISSILE_URANIUM: 47.74
-  PLUTONIUM_PELLET: 23.87
-  ENCASED_PLUTONIUM_CELL: 71.62
-  URANIUM_FUEL_UNIT: 79.57
-  PLUTONIUM_FUEL_ROD: 47.74
-  PLASTIC_SMART_PLATING: 33.75
-  AUTOMATED_WIRING: 1665.26
-  MODULAR_ENGINE: 84.37
-  ADAPTIVE_CONTROL_UNIT: 555.09
-  ASSEMBLY_DIRECTOR_SYSTEM: 370.06
-  THERMAL_PROPULSION_ROCKET: 33.75
+  RECYCLED_RUBBER: 383.0
+  COPPER_ROTOR: 31.52
+  STATOR: 1038.96
+  CLASSIC_BATTERY: 92.21
+  ELECTRIC_MOTOR: 34.83
+  HEAT_EXCHANGER: 22.39
+  COOLING_SYSTEM: 18.66
+  TURBO_PRESSURE_MOTOR: 9.95
+  WIRE: 1290.65
+  FUSED_WIRE: 472.72
+  IRON_WIRE: 6434.49
+  CABLE: 2807.18
+  FUSED_QUICKWIRE: 546.91
+  CATERIUM_CIRCUIT_BOARD: 68.55
+  SILICON_CIRCUIT_BOARD: 736.26
+  AI_LIMITER: 127.7
+  HIGH_SPEED_CONNECTOR: 2.5
+  CATERIUM_COMPUTER: 266.51
+  SUPERCOMPUTER: 1.67
+  SUPER_STATE_COMPUTER: 115.27
+  RADIO_CONTROL_UNIT: 14.93
+  INSULATED_CRYSTAL_OSCILLATOR: 35.35
+  EMPTY_FLUID_TANK: 7.46
+  PRESSURE_CONVERSION_CUBE: 18.66
+  PACKAGED_NITROGEN_GAS: 7.46
+  BEACON: 12.7
+  ELECTROMAGNETIC_CONTROL_ROD: 141.49
+  ENCASED_URANIUM_CELL: 6.19
+  INFUSED_URANIUM_CELL: 71.62
+  NON_FISSILE_URANIUM: 47.61
+  PLUTONIUM_PELLET: 23.81
+  URANIUM_FUEL_UNIT: 79.36
+  PLASTIC_SMART_PLATING: 37.32
+  AUTOMATED_WIRING: 1678.62
+  MODULAR_ENGINE: 93.3
+  ADAPTIVE_CONTROL_UNIT: 559.54
+  ASSEMBLY_DIRECTOR_SYSTEM: 373.03
+  THERMAL_PROPULSION_ROCKET: 37.32
