--- a/results/summary.yaml
+++ b/results/summary.yaml
@@ -1,5 +1,6 @@
 ppm: 183131919.464
 total_buildings: 33678.6526
+power_produced: 600070.244
 excess_power: 0.244
 recipes:
   URANIUM_POWER: 120.014
