correct power optimization for total power, not excess power

--- a/results/power-summary.yaml
+++ b/results/power-summary.yaml
@@ -1,75 +1,79 @@
-score: 1652698.691
-total_buildings: 9216.9003
-power_produced: 1784454.6725
-excess_power: 1652698.6952
+score: 1790314.3333
+total_buildings: 9500.3777
+power_produced: 1790314.34
+excess_power: 1649180.4496
 recipes:
-  COAL_POWER: 1896.7289
-  FUEL_POWER: 1356.0
-  TURBOFUEL_POWER: 1658.6667
+  COAL_POWER: 1757.44
+  FUEL_POWER: 2086.7089
+  TURBOFUEL_POWER: 1036.6667
   URANIUM_POWER: 252.0
   PLUTONIUM_POWER: 224.0
-  PURE_NITROGEN_GAS: 15.3067
+  NORMAL_NITROGEN_GAS: 7.0
+  PURE_NITROGEN_GAS: 11.8067
   IMPURE_CRUDE_OIL_WELL: 6.0
   NORMAL_CRUDE_OIL_WELL: 3.0
   PURE_CRUDE_OIL_WELL: 3.0
-  WATER_EXTRACTOR: 907.6881
+  WATER_EXTRACTOR: 955.1631
   IMPURE_CRUDE_OIL: 10.0
   NORMAL_CRUDE_OIL: 12.0
   PURE_CRUDE_OIL: 8.0
-  PURE_IRON_ORE: 6.2844
-  PURE_COPPER_ORE: 2.1299
-  PURE_LIMESTONE: 1.2923
+  PURE_IRON_ORE: 5.8138
+  PURE_COPPER_ORE: 3.7494
+  PURE_LIMESTONE: 0.6462
   IMPURE_COAL: 6.0
   NORMAL_COAL: 29.0
   PURE_COAL: 15.0
-  NORMAL_CATERIUM_ORE: 2.8837
   PURE_CATERIUM_ORE: 8.0
-  NORMAL_RAW_QUARTZ: 3.9248
+  NORMAL_RAW_QUARTZ: 5.3946
   PURE_RAW_QUARTZ: 5.0
   IMPURE_SULFUR: 1.0
   NORMAL_SULFUR: 7.0
   PURE_SULFUR: 3.0
   IMPURE_URANIUM: 1.0
   NORMAL_URANIUM: 3.0
-  PURE_BAUXITE: 3.51
-  IRON_INGOT: 135.7067
-  COPPER_ALLOY_INGOT: 33.2267
-  CATERIUM_INGOT: 177.1156
+  NORMAL_BAUXITE: 3.5093
+  IRON_INGOT: 102.4178
+  COPPER_ALLOY_INGOT: 58.4903
+  CATERIUM_INGOT: 138.6667
   SOLID_STEEL_INGOT: 20.16
-  ALUMINUM_INGOT: 54.7556
-  CONCRETE: 22.4
-  QUARTZ_CRYSTAL: 29.037
-  SILICA: 229.6
-  PETROLEUM_COKE: 31.1
-  ALUMINUM_SCRAP: 13.6889
+  ALUMINUM_INGOT: 46.7911
+  WET_CONCRETE: 4.2
+  QUARTZ_CRYSTAL: 46.2933
+  SILICA: 240.0334
+  PETROLEUM_COKE: 7.0187
+  ELECTRODE_ALUMINUM_SCRAP: 14.0373
   HEAVY_OIL_RESIDUE: 390.0
-  DILUTED_FUEL: 187.6
-  TURBO_BLEND_FUEL: 165.8667
-  SLOPPY_ALUMINA: 13.6889
+  DILUTED_FUEL: 306.3851
+  TURBOFUEL: 248.8
+  SLOPPY_ALUMINA: 10.528
   SULFURIC_ACID: 20.16
   NITRIC_ACID: 33.6
   IRON_ROD: 6.72
   CAST_SCREW: 109.312
-  IRON_PLATE: 59.92
+  COATED_IRON_PLATE: 15.9787
   STITCHED_IRON_PLATE: 29.8667
-  COPPER_SHEET: 84.0
-  ALCLAD_CASING: 21.9022
+  COPPER_SHEET: 63.392
+  ALCLAD_CASING: 18.7164
   STEEL_PIPE: 40.32
   ENCASED_INDUSTRIAL_PIPE: 16.8
   BOLTED_FRAME: 22.4
   HEAVY_FLEXIBLE_FRAME: 5.9733
   FUSED_MODULAR_FRAME: 14.9333
-  RESIDUAL_RUBBER: 67.6667
+  RESIDUAL_PLASTIC: 7.9893
+  RESIDUAL_RUBBER: 66.92
   QUICKWIRE_STATOR: 21.0
-  CATERIUM_WIRE: 25.2933
+  HEAT_EXCHANGER: 17.92
+  FUSED_WIRE: 33.7244
   CABLE: 6.72
-  QUICKWIRE: 189.7778
-  SILICON_CIRCUIT_BOARD: 18.6667
-  AI_LIMITER: 13.0667
-  SILICON_HIGH_SPEED_CONNECTOR: 28.0
-  RADIO_CONTROL_SYSTEM: 9.9556
-  INSULATED_CRYSTAL_OSCILLATOR: 34.8444
+  QUICKWIRE: 118.6895
+  FUSED_QUICKWIRE: 73.9403
+  SILICON_CIRCUIT_BOARD: 13.888
+  AI_LIMITER: 10.08
+  SILICON_HIGH_SPEED_CONNECTOR: 57.8667
+  RADIO_CONNECTION_UNIT: 11.9467
+  INSULATED_CRYSTAL_OSCILLATOR: 26.88
   PRESSURE_CONVERSION_CUBE: 22.4
+  COMPACTED_COAL: 149.28
   BEACON: 13.44
   ELECTROMAGNETIC_CONNECTION_ROD: 21.0
   INFUSED_URANIUM_CELL: 84.0
